--- a/style2.css
+++ b/style2.css
@@ -66,5 +66,9 @@ footer {
     .conteudo {
         width: 90%; 
         margin: 0 auto; 
+        padding: 20px; 
+        font-size: 18px; 
+        overflow-y: auto; 
+        max-height: 70vh; 
     }
 }
