--- a/style4.css
+++ b/style4.css
@@ -97,9 +97,7 @@ footer {
     header {
         text-align: center;
     }
-    nav {
-        display: none; 
-    }
+
 
     .menu-icon {
         display: block;
@@ -109,6 +107,10 @@ footer {
     .conteudo {
         width: 90%; 
         margin: 0 auto; 
+        padding: 20px; 
+        font-size: 18px; 
+        overflow-y: auto; 
+        max-height: 70vh; 
     }
     .imagem img {
         max-width: 100%; 
