--- a/style.css
+++ b/style.css
@@ -98,29 +98,24 @@ nav a {
     align-items: center;
 }
 
+
 @media screen and (max-width: 767px) {
     .conteudo {
-        width: 90%; 
-        margin: 0 auto; 
-        padding: 20px; 
-        font-size: 18px; 
-        overflow-y: auto; 
-        max-height: 70vh; 
+        margin: 10px;
     }
     .foto-perfil img {
-        width: 200px; 
-        height: 200px;
-        margin-top: 30px; 
-    }
-    .icon-container {
-        margin-top: 20px; 
+        width: 150px;
+        height: 150px;
+        margin-top: 10px;
     }
     .icon {
-        font-size: 1.5em; 
-        margin: 0 8px; 
+        font-size: 1.5em;
+        margin: 0 8px;
     }
     header {
-        text-align: center; 
+        padding: 5px;
     }
-    
+    nav a {
+        font-size: 16px;
+    }
 }
