--- a/style2.css
+++ b/style2.css
@@ -62,13 +62,19 @@ footer {
     font-size: 17px;
 }
 
+
 @media screen and (max-width: 767px) {
     .conteudo {
-        width: 90%; 
-        margin: 0 auto; 
-        padding: 20px; 
-        font-size: 18px; 
-        overflow-y: auto; 
-        max-height: 70vh; 
+        margin: 10px;
+    }
+    header {
+        padding: 5px;
+    }
+    nav a {
+        font-size: 16px;
     }
 }
+
+
+
+
